--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,12 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.maps.android:android-maps-utils:1.3.1'
     implementation 'com.android.volley:volley:1.2.0'
+    implementation 'androidx.core:core:1.0.1'
 }
