--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:1.3.1'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'androidx.core:core:1.0.1'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation "androidx.work:work-runtime-ktx:2.7.0"
 }
